tests/ui/did_you_mean/issue-46836-identifier-not-instead-of-negation.stderr
error: expected `{`, found `;`
  --> $DIR/issue-46836-identifier-not-instead-of-negation.rs:21:31
   |
LL |         println!("Then when?");
   |                               ^ expected `{`
   |
note: the `if` expression is missing a block after this condition
  --> $DIR/issue-46836-identifier-not-instead-of-negation.rs:20:8
   |
LL |       if not  // lack of braces is [sic]
   |  ________^
LL | |         println!("Then when?");
   | |______________________________^

error: aborting due to 1 previous error

